--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -18,11 +18,11 @@
     width: 90px;
 }
 .navbar .rightside{
-    /* flex: 50%; */
+    flex: 50%;
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 .navbar a{
     color: white;
