--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -15,7 +15,11 @@
     font-size: 50px;
     cursor: pointer;
   }
+  .socialMedia svg:hover{
+    color:red;
+  }
   
   .footer p {
     color:rgb(241, 232, 232);
+    text-decoration:none;
   }
