--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -31,6 +31,7 @@
 form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: auto;
   height: auto;
   padding: 30px;
@@ -38,7 +39,7 @@ form {
 
 form input {
   height: 40px;
-  width: 80%;
+  width: 100%;
   border: none;
   border-bottom: 1px solid #121619;
   color: black;
@@ -47,7 +48,7 @@ form input {
 form textarea {
   margin-top: 15px;
   height: 70px;
-  width: 80%;
+  width: 100%;
   border: none;
   border-bottom: 1px solid #121619;
   color: black;
@@ -55,7 +56,7 @@ form textarea {
 input::placeholder,
 textarea::placeholder {
   font-weight: bold;
-  color: black;
+  color: rgb(189, 19, 19);
   font-family: Arial, Helvetica, sans-serif;
 }
 form input:focus,
@@ -73,8 +74,26 @@ form button {
   width: 140px;
   height: 40px;
   border: none;
-  background-color: #121619;
-  color: whitesmoke;
+  background-color: #0985e3;
+  color: rgb(194, 231, 12);
   font-size: 15px;
   cursor: pointer;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  
+}
+form button:hover{
+  background-color: #042e4e;
+  color: antiquewhite;
+}
+p{color: red;}
+
+.btnn{
+  display: flex;
+  justify-content: space-evenly;
+align-items: center;
 }
