--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -125,8 +125,8 @@
     .headerContainer p {
       font-size: 34px;
       color: white;
-      padding: 40px;
-      margin-top: 35px;
+     
+      margin: 35px;
     }
     
   }
